--- a/css/style.css
+++ b/css/style.css
@@ -16,3 +16,10 @@
 
 /* Media Queries */
 @import 'mq/mq.css';
+
+
+.mail-list{
+    width: 100px;
+    height: 100px;
+    background-color: aqua;
+}
