--- a/css/style.css
+++ b/css/style.css
@@ -12,14 +12,9 @@
 @import 'cmps/app-home.css';
 @import 'cmps/app-footer.css';
 @import 'cmps/app-header.css';
+@import '/css/mail-compose.css';
 
 
 /* Media Queries */
 @import 'mq/mq.css';
 
-
-.mail-list{
-    width: 100px;
-    height: 100px;
-    background-color: aqua;
-}
