after main layout and side bar css + search bar functionality

--- a/css/style.css
+++ b/css/style.css
@@ -20,3 +20,6 @@
 /* Media Queries */
 @import 'mq/mq.css';
 
+/* Mail App */
+@import '/css/mail-css/mail-app.css';
+@import '/css/mail-css/mail-list.css';
