--- a/css/mail-compose.css
+++ b/css/mail-compose.css
@@ -7,3 +7,20 @@
     bottom: 2.3rem;
     background-color: rgb(255, 255, 255);
 }
+
+.user-msg{
+    position: absolute;
+    top: 50px;
+    right: 10px;
+    background-color: lightgreen;
+    padding: 10px;
+}
+
+.success {
+    background-color: greenyellow;
+}
+
+.error{
+    background-color: red;
+    color: white;
+}
