--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
 @import 'cmps/app-home.css';
 @import 'cmps/app-footer.css';
 @import 'cmps/app-header.css';
-@import '/css/mail-compose.css';
+@import 'mail-css/mail-compose.css';
 @import 'cmps/note-card.css';
 @import 'cmps/adding-from.css';
 
@@ -21,5 +21,5 @@
 @import 'mq/mq.css';
 
 /* Mail App */
-@import '/css/mail-css/mail-app.css';
-@import '/css/mail-css/mail-list.css';
+@import 'mail-css/mail-app.css';
+@import 'mail-css/mail-list.css';
