--- a/css/cmps/app-header.css
+++ b/css/cmps/app-header.css
@@ -1,3 +1,19 @@
 .app-header{
     background-color: var(--primary-clr-100);
+    align-items: center;
+}
+.app-header h3{
+    font-size: 1.5rem;
+    padding: 5px 0  0 5px;
+    margin: 0;
+}
+.nav-bar{
+    display: flex;
+    font-family: amaticBold;
+    gap: 20px;
+
+}
+.nav-bar>*{
+    text-decoration: none;
+
 }
