--- a/css/cmps/app-home.css
+++ b/css/cmps/app-home.css
@@ -1,4 +1,32 @@
 .app-home{
-    height: 85vh;
-   
+    height: 82.2vh;
+    background-color: azure;
+}
+
+.image-container{
+    justify-content: space-around;
+    align-items: center;
+}
+
+.app-home img{  
+    width: 150px;
+    height: 150px;
+    border-radius: 30px;
+    cursor:grab;
+    box-shadow: 0px 2px 20px;
+    color: rgba(71, 202, 200, 0.805);
+    transition: 0.3s;
+}
+.home-title{
+    color: rgba(71, 202, 200, 0.805);
+    font-family: amaticBold;
+   text-align: center;
+   margin: 40px 0;
+   font-size: 4rem;
+   transition: 2s;
+   transform: scale3d(2);
+}
+
+.app-home img:hover{
+    transform: scale(1.1);
 }
