--- a/css/mail-css/mail-compose.css
+++ b/css/mail-css/mail-compose.css
@@ -5,13 +5,14 @@
     width: 300px;
     max-height: 250px;
     bottom: 2.3rem;
+    left: 19.8%;
     background-color: rgb(255, 255, 255);
 }
 
 .user-msg{
     position: absolute;
     top: 50px;
-    right: 10px;
+    right: 30px;
     background-color: lightgreen;
     padding: 10px;
 }
