--- a/css/basic/base.css
+++ b/css/basic/base.css
@@ -7,6 +7,7 @@ body {
     margin: 0;
     font-size: 0.875rem;
     line-height: 1.714285714285714;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 h1, h2, h3, h4, h5, h6 {
