--- a/css/cmps/app-footer.css
+++ b/css/cmps/app-footer.css
@@ -1,5 +1,8 @@
 .footer{
     background-color: var(--primary-clr-100);
     justify-content:center;
-    align-items: center;
+    position: fixed;
+    bottom: 0;
+    width:100%;
+
 }
