--- a/css/cmps/note-card.css
+++ b/css/cmps/note-card.css
@@ -1,47 +1,49 @@
 .note-card{
-    justify-content: center;
     margin: 0 auto; 
     display: flex;
-    flex-wrap: wrap; 
-    object-fit: cover;
+    flex-wrap: wrap;
     align-items: flex-end;
+    padding: 0;
     
     
 }
-
+.notes-preview{
+    padding: 1em;
+    border-radius: 1rem;
+}
 
 .notes-preview-container{
-    background-color: #e8b1f2;
-    margin: 1em;
+    background-color: #4b47462c;
+    margin: 0.5em;
     border-radius: 1rem;
     box-shadow: 1px 1px 1px 1px #000;
-    padding: 2em;
+    padding:0.5em;
  
     
 }
 
 .note-txt{
-    background-color:#e3ad77 ;
+    background-color:#e3ad7795 ;
 
 
 }
 
 .note-img{
-    background-color: #e8b1f2 ;
+    background-color: #e8b1f28b ;
     
 }
 
-.note-img img{
+.notes-preview  img{
     width: 16em;
 }
 
 .note-todos{
-    background-color: rgb(245, 133, 133);
+    background-color: rgba(245, 133, 133, 0.514);
 }
 
 
 .note-video{
-    background-color: lightseagreen;
+    background-color: rgba(32, 178, 171, 0.553);
 }
 .pinned-note{
     display: grid;
@@ -49,10 +51,40 @@
     grid-template-areas: "pin pin pin pin ";
 }
 
-.pin{
-    background-color: aquamarine;
+
+
+
+.add-btn{
+    margin: 1px;
+    color: #4b4746;
+    width: 5em;
+    height: 2.5em;
+    background-color: aliceblue;
+    border-radius: 1em;
+}
+
+.btn-card{
+    justify-content: space-around;
+    margin-bottom: 1em;
+}
+
+.input-keep{
+    width: 100%;
+    border-style: solid;
+    border-width:3px;
+}
     
-       
+
+.ul-to-do{
+    list-style: none;
 }
 
 
+.color-picker-dot {
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    display: inline-block;
+    cursor: pointer;
+    border: 1px solid black;
+  }
