--- a/css/setup/vars.css
+++ b/css/setup/vars.css
@@ -1,5 +1,5 @@
 :root {
-    --primary-clr-100: rgba(228, 220, 65, 0.805);
+    --primary-clr-100:  rgba(71, 202, 200, 0.805);;
     --primary-clr-200: #e8b1f2;
  
   
