--- a/css/cmps/app-home.css
+++ b/css/cmps/app-home.css
@@ -1,6 +1,7 @@
 .app-home{
-    height: 82.2vh;
-    background-color: azure;
+    min-height: 85vh;
+    
+    background-color:rgba(0, 0, 0, 0.473)
 }
 
 .image-container{
@@ -17,6 +18,7 @@
     box-shadow: 0px 2px 20px;
     color: rgba(71, 202, 200, 0.805);
     transition: 0.3s;
+    margin: 1em;
 }
 .home-title{
     color: rgba(71, 202, 200, 0.805);
